# dsa

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE.txt  README.md  codecov.yml  coverage_report.py  dsa.natvis  main.cpp  main.h
.github/actions/setup-llvm-19/: action.yml
.github/actions/setup-msvc/: action.yml
.github/workflows/: ci-cmake-multi-platform.yml  ci.yml  doxygen.yml
include/dsa/: ForwardList.h  List.h  Queue.h  Stack.h  array.h  dsa.h  forward_list.h  list.h  memory.h  queue.h  stack.h  vector.h
src/: CMakeLists.txt
src/DataStructures/: CMakeLists.txt
src/DataStructures/ForwardList/: ForwardList.h
src/DataStructures/List/: List.h
src/DataStructures/Queue/: Queue.h
src/DataStructures/Stack/: Stack.h
tests/: CMakeLists.txt  common.cpp  common.h
tests/DataStructures/: CMakeLists.txt  common.h
tests/DataStructures/ForwardList/: CMakeLists.txt  ForwardListCtors.cpp  ForwardListCtorsTest.cpp  ForwardListGet.cpp  ForwardListGetTest.cpp  ForwardListGrow.cpp  ForwardListGrowTest.cpp  ForwardListItors.cpp  ForwardListMerge.cpp  ForwardListMergeTest.cpp  ForwardListOperators.cpp  ForwardListOperatorsTest.cpp  ForwardListResize.cpp  ForwardListResizeTest.cpp  ForwardListReverse.cpp  ForwardListSet.cpp  ForwardListSetTest.cpp  ForwardListShrink.cpp  ForwardListShrinkTest.cpp  ForwardListSplice.cpp  ForwardListSpliceTest.cpp  ForwardListSwap.cpp  ForwardListUnique.cpp  common.h
tests/DataStructures/List/: CMakeLists.txt  ListCtors.cpp  ListCtorsTest.cpp  ListGet.cpp  ListGetTest.cpp  ListGrow.cpp  ListGrowTest.cpp  ListItors.cpp  ListMerge.cpp  ListOperators.cpp  ListOperatorsTest.cpp  ListResize.cpp  ListReverse.cpp  ListReverseTest.cpp  ListSet.cpp  ListSetTest.cpp  ListShrink.cpp  ListSplice.cpp  ListSwap.cpp  ListSwapTest.cpp  ListUnique.cpp  ListUniqueTest.cpp  common.h
tests/DataStructures/Queue/: CMakeLists.txt  QueueCtors.cpp  QueueCtorsTest.cpp  QueueGet.cpp  QueueGetTest.cpp  QueueGrow.cpp  QueueOperators.cpp  QueueSet.cpp  QueueSetTest.cpp  QueueShrink.cpp  common.h
tests/DataStructures/Stack/: CMakeLists.txt  StackCtors.cpp  StackCtorsTest.cpp  StackGet.cpp  StackGrow.cpp  StackOperators.cpp  StackOperatorsTest.cpp  StackSet.cpp  StackSetTest.cpp  StackShrink.cpp  StackShrinkTest.cpp  common.h
tests/ForwardList/: CMakeLists.txt  ForwardListCtorsTest.cpp  ForwardListGetTest.cpp  ForwardListGrowTest.cpp  ForwardListItorsTest.cpp  ForwardListMergeTest.cpp  ForwardListOperatorsTest.cpp  ForwardListResizeTest.cpp  ForwardListReverseTest.cpp  ForwardListSetTest.cpp  ForwardListShrinkTest.cpp  ForwardListSpliceTest.cpp  ForwardListSwapTest.cpp  ForwardListUniqueTest.cpp
tests/List/: CMakeLists.txt  ListCtorsTest.cpp  ListGetTest.cpp  ListGrowTest.cpp  ListItorsTest.cpp  ListMergeTest.cpp  ListOperatorsTest.cpp  ListResizeTest.cpp  ListReverseTest.cpp  ListSetTest.cpp  ListShrinkTest.cpp  ListSpliceTest.cpp  ListSwapTest.cpp  ListUniqueTest.cpp
tests/Queue/: CMakeLists.txt  QueueCtorsTest.cpp  QueueGetTest.cpp  QueueGrowTest.cpp  QueueOperatorsTest.cpp  QueueSetTest.cpp  QueueShrinkTest.cpp
tests/Stack/: CMakeLists.txt  StackCtorsTest.cpp  StackGetTest.cpp  StackGrowTest.cpp  StackOperatorsTest.cpp  StackSetTest.cpp  StackShrinkTest.cpp
tests/array/: CMakeLists.txt  array_binding_test.cpp  array_operators_test.cpp  array_ranges_test.cpp  array_test.cpp
tests/forward_list/: CMakeLists.txt  forward_list_ctors_test.cpp  forward_list_get_test.cpp  forward_list_grow_test.cpp  forward_list_itors_test.cpp  forward_list_merge_test.cpp  forward_list_operators_test.cpp  forward_list_ranges_test.cpp  forward_list_resize_test.cpp  forward_list_reverse_test.cpp  forward_list_set_test.cpp  forward_list_shrink_test.cpp  forward_list_sort_test.cpp  forward_list_splice_test.cpp  forward_list_swap_test.cpp  forward_list_unique_test.cpp
tests/list/: CMakeLists.txt  list_ctors_test.cpp  list_get_test.cpp  list_grow_test.cpp  list_itors_test.cpp  list_merge_test.cpp  list_operators_test.cpp  list_ranges_test.cpp  list_resize_test.cpp  list_reverse_test.cpp  list_set_test.cpp  list_shrink_test.cpp  list_sort_test.cpp  list_splice_test.cpp  list_swap_test.cpp  list_unique_test.cpp
tests/queue/: CMakeLists.txt  queue_ctors_test.cpp  queue_get_test.cpp  queue_grow_test.cpp  queue_operators_test.cpp  queue_set_test.cpp  queue_shrink_test.cpp  queue_swap_test.cpp
tests/stack/: CMakeLists.txt  stack_ctors_test.cpp  stack_get_test.cpp  stack_grow_test.cpp  stack_operators_test.cpp  stack_set_test.cpp  stack_shrink_test.cpp  stack_swap_test.cpp
tests/vector/: CMakeLists.txt  vector_ctors_test.cpp  vector_grow_test.cpp  vector_itors_test.cpp  vector_operators_test.cpp  vector_ranges_test.cpp  vector_resize_test.cpp  vector_set_test.cpp  vector_shrink_test.cpp  vector_swap_test.cpp
