
include_directories("../../src/DataStructures/ForwardList/")
include_directories("../../src/DataStructures/List/")
include_directories("../../src/DataStructures/Queue/")
include_directories("../../src/DataStructures/Stack/")

add_subdirectory("ForwardList")
add_subdirectory("List")
add_subdirectory("Queue")
add_subdirectory("Stack")
