project(test_forward_list LANGUAGES CXX)

include_directories(${CMAKE_SOURCE_DIR}/include/)
include_directories(${CMAKE_SOURCE_DIR}/tests/)

add_executable(ForwardListCtorsTest ForwardListCtorsTest.cpp)
add_test(NAME ForwardListCtorsTest COMMAND ForwardListCtorsTest)

add_executable(ForwardListGrowTest ForwardListGrowTest.cpp)
add_test(NAME ForwardListGrowTest COMMAND ForwardListGrowTest)

add_executable(ForwardListShrinkTest ForwardListShrinkTest.cpp)
add_test(NAME ForwardListShrinkTest COMMAND ForwardListShrinkTest)

add_executable(ForwardListGetTest ForwardListGetTest.cpp)
add_test(NAME ForwardListGetTest COMMAND ForwardListGetTest)

add_executable(ForwardListSetTest ForwardListSetTest.cpp)
add_test(NAME ForwardListSetTest COMMAND ForwardListSetTest)

add_executable(ForwardListReverseTest ForwardListReverseTest.cpp)
add_test(NAME ForwardListReverseTest COMMAND ForwardListReverseTest)

add_executable(ForwardListOperatorsTest ForwardListOperatorsTest.cpp)
add_test(NAME ForwardListOperatorsTest COMMAND ForwardListOperatorsTest)

add_executable(ForwardListSwapTest ForwardListSwapTest.cpp)
add_test(NAME ForwardListSwapTest COMMAND ForwardListSwapTest)

add_executable(ForwardListMergeTest ForwardListMergeTest.cpp)
add_test(NAME ForwardListMergeTest COMMAND ForwardListMergeTest)

add_executable(ForwardListResizeTest ForwardListResizeTest.cpp)
add_test(NAME ForwardListResizeTest COMMAND ForwardListResizeTest)

add_executable(ForwardListUniqueTest ForwardListUniqueTest.cpp)
add_test(NAME ForwardListUniqueTest COMMAND ForwardListUniqueTest)

add_executable(ForwardListSpliceTest ForwardListSpliceTest.cpp)
add_test(NAME ForwardListSpliceTest COMMAND ForwardListSpliceTest)

add_executable(ForwardListItorsTest ForwardListItorsTest.cpp)
add_test(NAME ForwardListItorsTest COMMAND ForwardListItorsTest)
